[workspace]
resolver = "2"
members = [
  # utilities
  "oco",
  "any_spawner",
  "const_str_slice_concat",
  "either_of",
  "next_tuple",
  "oco",
  "or_poisoned",

  # core
  "hydration_context",
  "leptos",
  "leptos_dom",
  "leptos_config",
  "leptos_hot_reload",
  "leptos_macro",
  "leptos_server",
  "reactive_graph",
  "reactive_stores",
  "reactive_stores_macro",
  "server_fn",
  "server_fn_macro",
  "server_fn/server_fn_macro_default",
  "tachys",

  # integrations
  "integrations/actix",
  "integrations/axum",
  "integrations/utils",

  # libraries
  "meta",
  "router",
  "router_macro",
  "any_error",
]
exclude = ["benchmarks", "examples", "projects"]

[workspace.package]
version = "0.7.0-rc1"
edition = "2021"
rust-version = "1.76"

[workspace.dependencies]
throw_error = { version = "0.2.0-rc1" }
any_spawner = { version = "0.1.0" }
const_str_slice_concat = { version = "0.1.0" }
either_of = { version = "0.1.0" }
hydration_context = { version = "0.2.0-rc1" }
leptos = { version = "0.7.0-rc1" }
leptos_config = { version = "0.7.0-rc1" }
leptos_dom = { version = "0.7.0-rc1" }
leptos_hot_reload = { version = "0.7.0-rc1" }
leptos_integration_utils = { version = "0.7.0-rc1" }
leptos_macro = { version = "0.7.0-rc1" }
leptos_router = { version = "0.7.0-rc1" }
leptos_router_macro = { version = "0.7.0-rc1" }
leptos_server = { version = "0.7.0-rc1" }
leptos_meta = { version = "0.7.0-rc1" }
next_tuple = { version = "0.1.0-rc1" }
oco_ref = { version = "0.2.0" }
or_poisoned = { version = "0.1.0" }
reactive_graph = { version = "0.1.0-rc1" }
reactive_stores = { version = "0.1.0-rc1" }
reactive_stores_macro = { version = "0.1.0-rc1" }
server_fn = { version = "0.7.0-rc1" }
server_fn_macro = { version = "0.7.0-rc1" }
server_fn_macro_default = { version = "0.7.0-rc1" }
tachys = { version = "0.1.0-rc1" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.metadata.cargo-all-features]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]
